Displayed two component on screen.

--- a/src/app/dashboard1/dashboard1.component.html
+++ b/src/app/dashboard1/dashboard1.component.html
@@ -1,1 +1,10 @@
-<p>dashboard1 works!</p>
+<h1>
+    My Dashboard 1
+</h1>
+<div>
+    Graph here
+    <div *ngFor="let graph of graphs">
+        {{graph}}
+    </div>
+    <button>Dashboard 1</button>
+</div>
