--- a/src/app/dashboard2/dashboard2.component.html
+++ b/src/app/dashboard2/dashboard2.component.html
@@ -1,1 +1,10 @@
-<p>dashboard2 works!</p>
+<h1>
+    My Dashboard 2
+</h1>
+<div>
+    Graph here
+    <div *ngFor="let graph of graphs">
+        {{graph}}
+    </div>
+    <button>Dashboard 2</button>
+</div>
